--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 							<h2>Ipsum lorem dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Raised in Jacksonville, FL, Justin Dalisay was exposed to live music experiences at a young age. Throughout high school, he gigged with local rock, pop, and jazz bands as well as playing in churches. Justin also grew up playing piano recitals at the age of 8. He attended the Douglas Anderson school of the Arts in high school where he studied classical and jazz guitar under Don Casper. He also has experience playing guitar in a pit orchestra for their school musical “Violet”, which was nominated at the state thespians competition in Tampa, FL in 2015.<br/>
+ 
+Justin also has a passion for recording music and has recorded a full length album for a local Jacksonville band that is on iTunes and Spotify, as well as playing lead guitar for the band. Justin is currently attending Stetson University as a Bachelors of music major with an outside field of business. At Stetson Justin is studying guitar under Stephen Robinson and has performed in a master class for Jorge Caballero. Justin also plays guitar in the Stetson University Jazz ensemble as well as the Stetson University Guitar Quartet. 
+</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
