--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Justin Dalisay</h2>
 						</header>
 						<p>Raised in Jacksonville, FL, Justin Dalisay was exposed to live music experiences at a young age. Throughout high school, he gigged with local rock, pop, and jazz bands as well as playing in churches. Justin also grew up playing piano recitals at the age of 8. He attended the Douglas Anderson school of the Arts in high school where he studied classical and jazz guitar under Don Casper. He also has experience playing guitar in a pit orchestra for their school musical “Violet”, which was nominated at the state thespians competition in Tampa, FL in 2015.<br/>
  
