updating the 1st paragraph

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						<header class="major">
 							<h2>Justin Dalisay</h2>
 						</header>
-						<p>Raised in Jacksonville, FL, Justin Dalisay was exposed to live music experiences at a young age. Throughout high school, he gigged with local rock, pop, and jazz bands as well as playing in churches. Justin also grew up playing piano recitals at the age of 8. He attended the Douglas Anderson school of the Arts in high school where he studied classical and jazz guitar under Don Casper. He also has experience playing guitar in a pit orchestra for their school musical “Violet”, which was nominated at the state thespians competition in Tampa, FL in 2015.<br/>
- 
-						Justin also has a passion for recording music and has recorded a full length album for a local Jacksonville band that is on iTunes and Spotify, as well as playing lead guitar for the band. Justin is currently attending Stetson University as a Bachelors of music major with an outside field of business. At Stetson Justin is studying guitar under Stephen Robinson and has performed in a master class for Jorge Caballero. Justin also plays guitar in the Stetson University Jazz ensemble as well as the Stetson University Guitar Quartet. 
+						<p>Raised in Jacksonville, FL, Justin Dalisay was exposed to live music experiences at a young age. Throughout high school, he gigged with local rock, pop, and jazz bands as well as playing in churches. Justin also grew up playing piano recitals at the age of 8. He graduated from the Douglas Anderson school of the Arts in high school where he studied classical and jazz guitar under Don Casper. He also has experience playing guitar in a pit orchestra for their school musical “Violet”, which was nominated at the state thespians competition in Tampa, FL in 2015. </br>
+						
+						Justin has a passion for recording music and has recorded a full length album for a local Jacksonville band that is on iTunes and Spotify, as well as playing lead guitar for the band. Justin is currently attending Stetson University as a Bachelors of music with an outside field of business. At Stetson, Justin is studying guitar under master guitar player, Stephen Robinson, and has performed in master classes for Jorge Caballero and Irina Kulicova. Justin also plays guitar in the Stetson University Jazz ensemble as well as the Stetson University Guitar Quartet.
 						</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
