--- a/index.html
+++ b/index.html
@@ -84,34 +84,19 @@
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
+						<!--<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="#">
 									<div class="row uniform 50%">
 										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
 										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-										<li><input type="submit" value="Send Message" name = "submit" id = "submit" /></li>
-
-										<?php
-											$name = $_POST['name'];
-											$email = $_POST['email'];
-											$message = $_POST['message'];
-											$from = 'From: Website'; 
-											$to = 'jdalisay@stetson.edu'; 
-											$subject = 'Website Contact';
-													
-											$body = "From: $name\n E-Mail: $email\n Message:\n $message";
-											if ($_POST['submit']) {				 
-												if (mail ($to, $subject, $body, $from)) { 
-												echo '<p>Your message has been sent!</p>';
-											} else { 
-												echo '<p>Something went wrong, go back and try again!</p>'; 
-											} 
-											}
-									?>
-										
-							</div>
+									</div>
+								</form>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</div>-->
 							<div class="4u$ 12u$(small)">
 								<ul class="labeled-icons">
 									<li>
