--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>Feel free to contact me about performance, recording,and/or teaching opportunities!  </p>
 						<!--<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="#">
@@ -101,17 +101,17 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
+										421 N Woodland Blvd Unit 7118<br />
+										Deland, FL<br />
 										United States
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										000-000-0000
+										(904) 866-0953
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">jdalisay@stetson.edu</a>
 									</li>
 								</ul>
 							</div>
